test/errors/value/str/split_empty_max.yasl
echo 'asbsadasd'->split('', 1)
